# Rust-snake-project-

./: .gitignore  README.md  index.html  render.yaml
rustysnake-app/: Cargo.toml
rustysnake-app/src/: audio.rs  main.rs
rustysnake-app/src/app/: config.rs  mod.rs  state.rs
rustysnake-app/src/app/ui/: game_screen.rs  main_menu.rs  mod.rs  settings_ui.rs
rustysnake-app/src/audio/: mod.rs
rustysnake-app/src/data/: leaderboard.rs  mod.rs  save_system.rs
rustysnake-app/src/game/: core.rs  mod.rs  modes.rs  powerups.rs
rustysnake-app/src/utils/: mod.rs  themes.rs
