[package]
name = "rustysnake-app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
chrono = "0.4"

[features]
default = ["rodio/rodio-null"]
rodio-backend = ["rodio/default"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["wav", "vorbis"]

[features]
default = ["rodio/rodio-null"]
rodio-backend = ["rodio/default"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["wav", "vorbis"]

[features]
default = ["rodio/rodio-null"]
rodio-backend = ["rodio/default"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["wav", "vorbis"]

[features]
default = ["rodio/rodio-null"]
rodio-backend = ["rodio/default"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["wav", "vorbis"]

[features]
default = ["rodio/rodio-null"]
rodio-backend = ["rodio/default"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["wav", "vorbis"]
