[dependencies]
eframe = { version = "0.24", features = ["persistence"] }
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rodio = "0.17"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]